OOBE: Attempt to enable Cellular when showing the details dialog.

Chrome creates a default Cellular network when Cellular is available
but not enabled (or SIM locked). This CL does the following:
* Removes the extra (and incorrect) additional Cellular network in
  cr_network_select.js
* Attempts to enable Cellular when the Cellular detail dialog is shown.

This should cover the majority of Cellular configuration in OOBE.

Bug: 810328
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ice8d7a58d3a9dba4784a74c11360ac04a1f9725d
Reviewed-on: https://chromium-review.googlesource.com/914595
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536424}
Former-commit-id: 97ede32758ee98a3ae035d070d57d94e535bd4ee